JOGL + OpenGL 2.x: ImageExample fixed